[package]
name = "tradingview"
description = "Rust bindings for leveraging TradingView functionalities"
version = "0.1.1"
edition = "2021"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
repository = "https://github.com/drager/tradingview.git"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "multipart", "cookies"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-tungstenite = { version = "0.24.0", features = ["url"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.16"
typed-builder = "0.20.0"
thiserror = "2.0.12"
regex = "1.8.3"
either = { version = "1.15.0", features = ["serde"]}
log = "0.4.26"
rand = "0.9.1"
libreauth = "0.17.0"
env_logger = "0.11.6"
async-stream = "0.3.6"

[dev-dependencies]
httpmock = "0.7"

[features]
native-tls = ["tokio-tungstenite/native-tls"]
