[package]
name = "tradingview"
description = "Rust bindings for leveraging TradingView functionalities"
version = "0.1.1"
edition = "2021"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
repository = "https://github.com/drager/tradingview.git"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-tungstenite = { version = "0.24", features = ["url"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
typed-builder = "0.23"
thiserror = "2"
regex = "1"
either = { version = "1", features = ["serde"]}
log = "0.4"
rand = "0.9"
libreauth = "0.17"
env_logger = "0.11"
async-stream = "0.3"

[dev-dependencies]
httpmock = "0.8"

[features]
native-tls = ["tokio-tungstenite/native-tls"]
